# TempoNest

./: .gitignore  .swp  1E  2E  GHSFourierLikeFuncs.cpp  GHSLikeFuncs.cpp  Makefile  Makefile.am  Makefile.in  Makefile.old  MakefileGPU  MakefileNoGPU  MultiNest.  MultiNestParams.cpp  README.md  T2accel.h  T2toolkit.h  TKfit.h  TKlog.h  TKmatrix.h  TempoNest.c  TempoNest.cpp  TempoNest.h  TempoNestDemo  TempoNestFindMax.c  TempoNestFindMax.cpp  TempoNestFindMaxGPU.c  TempoNestFindMaxGPU.cpp  TempoNestGPU.c  TempoNestGPU.cpp  TempoNestGPUFuncs.cu  TempoNestGPULikeFuncs.c  TempoNestGPULikeFuncs.cpp  TempoNestGPULinearLikeFuncs.c  TempoNestLikeFuncs.c  TempoNestLikeFuncs.cpp  TempoNestLikeFuncs.cpp.bk  TempoNestLikeFuncs.cpp~  TempoNestLinearLikeFuncs.c  TempoNestNGLikeFuncs.cpp  (+54 more)
.deps/: MultiNestParams.Plo  TempoNestGPULikeFuncs.Plo  TempoNestLikeFuncs.Plo  TempoNestNGLikeFuncs.Plo  TempoNestParams.Plo  TempoNestPlugin.Plo  TempoNestTextOutput.Plo  TempoNestUtilities.Plo  configfile.Plo  dgemm.Plo  dgemv.Plo  dgesvd.Plo  dpotrf.Plo  dpotri.Plo  dpotrs.Plo  qrdecomp.Plo
Ellipsis/: CMakeLists.txt  README.md  hanson.py
Ellipsis/ellipsis/: CMakeLists.txt  guided_hmc.c  guided_hmc.h  hanson.c  hanson.h  mt19937.c  mt19937.h
Ellipsis/examples/: CMakeLists.txt  gauss_f.f90  gauss_f_mod.f90  lin_alg.f90  uncorr_gauss_c.c  uncorr_gauss_f.f90
Ellipsis/tests/: CMakeLists.txt  test_c_ellipsis.c  test_hanson.c  test_hanson.h  test_kinetic_energy.c  test_kinetic_energy.h  test_mt19937.c  test_mt19937.h
Examples/: 2Groups.tar
Examples/Example1/: J0030+0451-whiteflags.txt  J0030+0451.par  J0030+0451.tim  defaultparameters.conf  gmon.out  new.par  new.tim
Examples/Example1/results/: Example1-2-J0030+0451-.paramnames  Example1-2-J0030+0451-.txt  Example1-2-J0030+0451-T2scaling.txt  Example1-2-J0030+0451-live.points  Example1-2-J0030+0451-phys_live.points  Example1-2-J0030+0451-summary.txt  Example1-3-J0030+0451-.par  Example1-3-J0030+0451-.paramnames  Example1-3-J0030+0451-.txt  Example1-3-J0030+0451-T2scaling.txt  Example1-3-J0030+0451-live.points  Example1-3-J0030+0451-phys_live.points  Example1-3-J0030+0451-summary.txt  Example1-;J0030+0451-.paramnames  Example1-;J0030+0451-live.points  Example1-;J0030+0451-phys_live.points  Example1-J0030+0451-.par  Example1-J0030+0451-.paramnames  Example1-J0030+0451-.txt  Example1-J0030+0451-_table.tex  Example1-J0030+0451-live.points  Example1-J0030+0451-phys_live.points  Example1-J0030+0451-summary.txt  Example1-MJ-MPI-J0030+0451-.resume  Example1-MJ-MPI-J0030+0451-.stats  Example1-MJ-MPI-J0030+0451-.txt  Example1-MJ-MPI-J0030+0451-_phys_live.txt  Example1-MJ-MPI-J0030+0451-_unnormalised.txt  Example1-NLRed-J0030+0451-.paramnames  Example1-NLRed-J0030+0451-ML.par  Example1-NLRed-J0030+0451-MLHistory.txt  L-NoMargin-J0030+0451-.par  L-NoMargin-J0030+0451-.txt  L-NoMargin-J0030+0451-NL.txt  L-NoMargin-J0030+0451-designMatrix.txt  L-NoMargin-J0030+0451-live.points  L-NoMargin-J0030+0451-phys_live.points  L-NoMargin-J0030+0451-summary.txt  L-QSDMargin-J0030+0451-.par  L-QSDMargin-J0030+0451-.txt  (+17 more)
Examples/Example2/: J0030+0451-whiteflags.txt  J0030+0451.par  J0030+0451.tim  defaultparameters.conf  defaultparameters.conf.2DMGroups  defaultparameters.conf.2Groups  defaultparameters.conf.2Groups.Glitch  defaultparameters.conf.2RedGroups  defaultparameters.conf.DM  defaultparameters.conf.Glitch  defaultparameters.conf.Red  defaultparameters.conf.RedGlitch  defaultparameters.conf.Spec  machine.file.1718633  slurm-1718625.out  slurm-1718633.out  submitwilkes  tempo2.80s-1373,sstar003.hpc.swin.edu.au.btr  tempo2.80s-25772,sstar003.hpc.swin.edu.au.btr  tempo2.80s-25773,sstar003.hpc.swin.edu.au.btr  tempo2.80s-25815,sstar003.hpc.swin.edu.au.btr  tempo2.80s-25819,sstar003.hpc.swin.edu.au.btr  tempo2.80s-25829,sstar003.hpc.swin.edu.au.btr  tempo2.80s-25975,sstar003.hpc.swin.edu.au.btr  tempo2.80s-434,sstar003.hpc.swin.edu.au.btr  tempo2.80s-9291,g2.hpc.swin.edu.au.btr  tempo2.80s-9292,g2.hpc.swin.edu.au.btr  tempo2.80s-944,sstar003.hpc.swin.edu.au.btr
Examples/Example3/: J0030+04-whiteflags.txt  J0030+0451.par  J0030+0451.tim  J1713-0747.par  J1713-0747.simulatemidwhite  defaultparameters.conf
Examples/Example3/Example3a/: 1857.kaspi.par  (+2 more)
MultiNest/: Makefile  Makefile.other  MakefileNoMPI  README  conftest.c  ctest  eggbox  gauss_shell  kmeans_clstr.mod  nested.F90  nested.mod  posterior.F90  posterior.mod  priors.mod  randomns.mod  utils1.mod  xmeans_clstr.mod
MultiNest/chains/: 1-IS.iterinfo  1-live.points  1-summary.txt
MultiNest/example_eggbox/: Evidences  Makefile  eggbox  like.f90  like.mod  main.f90  nestwrapper.mod  params.f90  params.mod
MultiNest/example_gauss_shell/: Makefile  like.f90  like.mod  nestwrapper.mod  params.f90  params.mod
PolyChord/: Makefile  README
PolyChord/CExample/: Makefile  eggbox.cpp
PolyChord/chains/: rastrigin.resume  rastrigin.stats  rastrigin.txt  rastrigin_unnormalised.txt
PolyChord/src/: .main.F90.swp  InitSampler.f90  InitSampler.f90~  Makefile  Makefile2  calculate.f90  calculate.f90~  calculate_module.mod  chordal_module.mod  chordal_sampling.f90  cluster_module.mod  evidence_module.mod  example_likelihoods.mod  feedback_module.mod  generate.F90  generate_module.mod  grades_module.mod  initsampler.mod  loglikelihood__genmod.f90  mpi_module.mod  mpi_utils.F90  nested_sampling.F90  nested_sampling_module.mod  priors_module.mod  random_module.mod  read_write_module.mod  settings_module.mod  utils.f90  utils_module.mod
Utilities/: FitLinearEvoCoeffs.py  MakeTimFile  MakeTimFile.C  filelist  new.tim
Utilities/WaterFallPlots/: backup.c  waterfall_plot  waterfall_plot.c
autoconf/: blas.m4  cula.m4  fftw.m4  lapack.m4  local.m4  mjk_fortran_test.m4  mlapack.m4  multinest.m4  package.m4  pgplot.m4  psrchive.m4  qd.bk  tempo2.bk.macro  tempo2.m4
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
lbfgs/lib/: lbfgs.c
lbfgs/sample/: sample  sample.c
manual/: TempoNestManual.aux  TempoNestManual.bbl  TempoNestManual.blg  TempoNestManual.tex  TempoNestManualNotes.bib
(+276 files in other folders)
